src/scss/modules/header.scss
@import "./variables.scss";

.header {
  position: fixed;
  top: 0;
  background: $menuColor;
  z-index: 1;

  @media (max-width: 680px) {
    width: 100%;
    height: 80px;
  }

  @media (max-width: 1024px) and (min-width: 681px) {
    width: 110px;
    height: 100%;
  }

  @media (max-width: 1400px) and (min-width: 1025px) {
    width: 150px;
    height: 100%;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    width: 150px;
    height: 100%;
  }

  @media (min-width: 1561px) {
    width: 150px;
    height: 100%;
  }
}

.menu-wrap {
  width: 100%;

  @media (max-width: 680px) {
    height: auto;
  }

  @media (max-width: 1400px) and (min-width: 681px) {
    height: 558px;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    height: 558px;
  }

  @media (min-width: 1561px) {
    height: 558px;
  }
}

.menu-item {
  background: $menuColor;

  @media (max-width: 680px) {
    width: 100%;
    height: 80px;

    &:not(:first-child) {
      opacity: 0;
      transition: transform .5s ease, opacity .5s ease;
    }
  }

  @media (max-width: 1400px) and (min-width: 681px) {
    position: relative;
    width: 100%;
    height: 118px;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    position: relative;
    width: 100%;
    height: 118px;
  }

  @media (min-width: 1561px) {
    position: relative;
    width: 100%;
    height: 118px;
  }

  // Начальная позиция блоков для анимации при нажитии на .mobile-menu
  &_gallery {
    @media (max-width: 680px) {
      transform: translate(-50px, 0, 0);
    }
  }

  &_about {
    @media (max-width: 680px) {
      transform: translate(50px, 0, 0);
    }
  }

  &_lays {
    @media (max-width: 680px) {
      transform: translate(-50px, 0, 0);
    }
  }

  &:not(:first-child) {
    @media (max-width: 680px) {
      line-height: 80px;
      border-top: 1px solid rgba(155, 155, 155, 0.18);
    }

    @media (min-width: 1025px) {
      cursor: pointer;

      &:before {
        content: "";
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        background: white;
        border-top: 1px solid #ddd;
        border-bottom: 1px solid #ddd;
        opacity: 0;
        transition: opacity 1s ease;
      }

      &:hover:before {
        opacity: 1;
      }
    }
  }

  @media (min-width: 681px) {
    &:first-child {
      cursor: pointer;
      height: 204px;
    }
  }

  &__logo_mobile {
    @media (max-width: 680px) {
      position: absolute;
      top: 14px;
      left: 19px;
      width: 57px;
      height: 50px;
      background: url(/src/img/mobile/lays_logo.png) no-repeat;
      background-size: cover;
    }
  }

  &__logo_desktop {
    @media (max-width: 1400px) and (min-width: 681px) {
      position: absolute;
      width: 100%;
      height: 100%;
      top: -34px;
      background: url(/src/img/desktop/lays_logo.png) no-repeat;
      background-position: center;
      background-size: 97px 85px;
    }
  }

  &__logo_desktop {
    @media (max-width: 1560px) and (min-width: 1401px) {
      position: absolute;
      width: 100%;
      height: 100%;
      top: -34px;
      background: url(/src/img/desktop/lays_logo.png) no-repeat;
      background-position: center;
      background-size: 97px 85px;
    }
  }

  &__logo_desktop {
    @media (min-width: 1561px) {
      position: absolute;
      width: 100%;
      height: 100%;
      top: -34px;
      background: url(/src/img/desktop/lays_logo.png) no-repeat;
      background-position: center;
      background-size: 97px 85px;
    }
  }

  &__caption {
    color: $logoFontColor;

    position: absolute;
    width: 118px;
    top: 28px;
    left: 0;
    right: 0;
    margin: 0 auto;
    font-family: $mediumFont;
    font-size: 1.125rem;
    text-align: center;
    letter-spacing: 1px;


    @media (max-width: 1400px) and (min-width: 681px) {
      position: relative;
      width: 100%;
      top: 126px;
      text-align: center;
      font-family: $mediumFont;
      font-size: 1rem;
      letter-spacing: 0;
    }

    @media (max-width: 1560px) and (min-width: 1401px) {
      position: relative;
      width: 100%;
      top: 126px;
      text-align: center;
      font-family: $mediumFont;
      font-size: 1rem;
      letter-spacing: 0;
    }

    @media (min-width: 1561px) {
      position: relative;
      width: 100%;
      top: 126px;
      text-align: center;
      font-family: $mediumFont;
      font-size: 1rem;
      letter-spacing: 0;
    }
  }

  &__icon {
    @media (max-width: 680px) {
      position: absolute;
      width: 100%;
      height: 80px;
    }

    @media (max-width: 1400px) and (min-width: 681px) {
      position: absolute;
      width: 100%;
      height: auto;
      top: 0;
      bottom: 20px;
    }

    @media (max-width: 1560px) and (min-width: 1401px) {
      position: absolute;
      width: 100%;
      height: auto;
      top: 0;
      bottom: 20px;
    }

    @media (min-width: 1561px) {
      position: absolute;
      width: 100%;
      height: auto;
      top: 0;
      bottom: 20px;
    }

  }

  &__text {
    text-align: center;
    color: $menuFontColor;

    @media (max-width: 680px) {
      font-size: $mobileMenuFontSize;
    }

    @media (max-width: 1400px) and (min-width: 681px) {
      position: relative;
      width: 100%;
      height: 14px;
      line-height: 1;
      font-size: $menuFontSize;
      top: 85px;
    }

    @media (max-width: 1560px) and (min-width: 1401px) {
      position: relative;
      width: 100%;
      height: 14px;
      line-height: 1;
      font-size: $menuFontSize;
      top: 85px;
    }

    @media (min-width: 1561px) {
      position: relative;
      width: 100%;
      height: 14px;
      line-height: 1;
      font-size: $menuFontSize;
      top: 85px;
    }
  }
}

.gallery-icon {
  @media (max-width: 680px) {
    background: url(/src/img/mobile/menu/gallery.png) no-repeat;
    background-position: 28px center;
    background-size: 40px 40px;
  }

  @media (max-width: 1400px) and (min-width: 681px) {
    background: url(/src/img/desktop/menu/gallery.png) no-repeat;
    background-position: center;
    background-size: 48px 48px;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    background: url(/src/img/desktop/menu/gallery.png) no-repeat;
    background-position: center;
    background-size: 48px 48px;
  }

  @media (min-width: 1561px) {
    background: url(/src/img/desktop/menu/gallery.png) no-repeat;
    background-position: center;
    background-size: 48px 48px;
  }
}

.about-icon {
  @media (max-width: 680px) {
    background: url(/src/img/mobile/menu/about.png) no-repeat;
    background-position: 28px center;
    background-size: 40px 40px;
  }

  @media (max-width: 1400px) and (min-width: 681px) {
    background: url(/src/img/desktop/menu/about.png) no-repeat;
    background-position: center 40%;
    background-size: 49px 59px;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    background: url(/src/img/desktop/menu/about.png) no-repeat;
    background-position: center 40%;
    background-size: 49px 59px;
  }

  @media (min-width: 1561px) {
    background: url(/src/img/desktop/menu/about.png) no-repeat;
    background-position: center 40%;
    background-size: 49px 59px;
  }
}

.lays-icon {
  @media (max-width: 680px) {
    background: url(/src/img/mobile/menu/lays.png) no-repeat;
    background-position: 28px center;
    background-size: 40px 40px;
  }

  @media (max-width: 1400px) and (min-width: 681px) {
    background: url(/src/img/desktop/menu/lays.png) no-repeat;
    background-position: center;
    background-size: 51px 49px;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    background: url(/src/img/desktop/menu/lays.png) no-repeat;
    background-position: center;
    background-size: 51px 49px;
  }

  @media (min-width: 1561px) {
    background: url(/src/img/desktop/menu/lays.png) no-repeat;
    background-position: center;
    background-size: 51px 49px;
  }
}

.mobile-menu {
  @media (max-width: 680px) {
    position: absolute;
    top: 27px;
    right: 25px;
    width: 32.5px;
    height: 25.5px;
  }
}

.close-menu_mobile {
  @media (max-width: 680px) {
    display: block;
    height: 60px;
    line-height: 60px;
    background: #f0eded;
    border-top: 1px solid rgba(155, 155, 155, 0.18);
    transform: translate(50px, 0, 0);
    opacity: 0;
    transition: transform .5s ease, opacity .5s ease;
  }

  @media (min-width: 681px) {
    display: none;
  }
}

.close-menu__text {
  @media (max-width: 680px) {
    text-align: center;
    color: #8e8d8d;
    font-size: 12px;
    letter-spacing: 0.2px;
    text-shadow: 1px 2px 2px white;
  }
}

.line {
  @media (max-width: 680px) {
    position: absolute;
    width: 32px;
    left: 50%;
    height: 5px;
    margin-left: -16px;
    background: $mobileLineColor;
    opacity: 1;
    transform-origin: left center;
    transition: all 0.2s ease-in-out;
  }

  &_upper {
    @media(max-width: 680px) {
      transform-origin: left center;
    }
  }

  &_middle {
    @media (max-width: 680px) {
      top: 10px;
      transform-origin: center center;
    }
  }

  &_lower {
    @media (max-width: 680px) {
      top: 21px;
      transform-origin: left center;
    }
  }
}

.line_upper_transform {
  @media (max-width: 680px) {
    transform: rotate(45deg) translate3d(-1px, -1px, 0);
  }
}

.line_middle_transform {
  @media (max-width: 680px) {
    opacity: 0;
    transform: scale(0);
  }
}

.line_lower_transform {
  @media (max-width: 680px) {
    transform: rotate(-45deg) translate3d(0, 0, 0);
  }
}

.menu_open {
  @media (max-width: 680px) {
    &:not(:first-child) {
      opacity: 1;
      transform: translate(0);
    }
  }
}

.close-menu_mobile_open {
  @media (max-width: 680px) {
    opacity: 1;
    transform: translate(0);
  }
}

